<?xml version="1.0"?>
<package>
  <name>Robocon</name>
  <version>1.0.0</version>
  <description>The Robocon meta package</description>

  <license>GPLv3</license>
<maintainer email="mack@Robocon.org">Mack</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>Robocon_msgs</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <!-- <run_depend>Robocon_msgs</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


</package>
