<?xml version="1.0"?>
<package>
  <name>robot_visualizer</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `duckiebot_visualizer` in `package.xml`.</description>

  <author email="syliu@mit.edu">Shih-Yuan Liu</author>
  <maintainer email='mack@robocon.org'>Mack</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robocon_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>robocon_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
